--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>PeronPlanning</title>
   <style>
     body { font-family: Arial,sans-serif; background:#f0f0f0; display:flex; justify-content:center; padding:20px; }
+    #loginDiv { text-align:center; margin-top:50px; }
+    #loginDiv input { padding:5px; margin-right:5px; }
+    #loginDiv button { padding:5px 10px; }
+    #loginMsg { color:red; margin-top:10px; }
+    #characters { display:flex; justify-content:center; gap:20px; margin-bottom:20px; }
+    .character { width:150px; border:2px solid transparent; border-radius:10px; cursor:pointer; transition: transform 0.2s, border-color 0.2s; }
+    .character:hover { transform: scale(1.1); border-color:gold; }
     .container { background:#fff; padding:20px; border-radius:12px; width:650px; box-shadow:0 3px 10px rgba(0,0,0,0.2); }
     h1 { text-align:center; margin-bottom:20px; }
     .player { margin:15px 0; text-align:center; }
@@ -22,10 +29,6 @@
     #result { text-align:center; margin-top:20px; font-weight:bold; }
     #logoutBtn { display:block; margin:10px auto; padding:5px 15px; cursor:pointer; }
     #usersList { text-align:center; margin-bottom:20px; }
-    #loginDiv { text-align:center; margin-top:50px; }
-    #loginDiv input { padding:5px; margin-right:5px; }
-    #loginDiv button { padding:5px 10px; }
-    #loginMsg { color:red; margin-top:10px; }
   </style>
 </head>
 <body>
@@ -37,31 +40,58 @@
   let username = localStorage.getItem("username");
 
   if (!username) {
-    // FORMULARIO DE LOGIN
+    // --- LOGIN ---
     const loginDiv = document.createElement("div");
     loginDiv.id = "loginDiv";
     loginDiv.innerHTML = `
       <h1>Login</h1>
+      <div id="characters">
+        <img src="https://i.giphy.com/KbAj5yM9zzZRvX0YBn.webp" 
+             alt="Ryu" class="character" data-character="Peron">
+        <img src="https://media.tenor.com/Wcpxt4b9aLUAAAAM/milei-javier-milei.gif" 
+             alt="Milei" class="character" data-character="Milei">
+             <img src="https://media.tenor.com/UH-OX_1X8ZwAAAAM/axel-axel-kicillof.gif" 
+             alt="Milei" class="character" data-character="kicillof">
+             <img src="https://media.tenor.com/bU60bEqgnSIAAAAM/cfk-cristina.gif" 
+             alt="Milei" class="character" data-character="kicillof">
+             
+      </div>
       <input type="text" id="loginUser" placeholder="Usuario">
       <button id="loginBtn">Ingresar</button>
       <div id="loginMsg"></div>
     `;
     container.appendChild(loginDiv);
 
+    let selectedCharacter = null;
+
+    // Hacer los GIFs botones
+    document.querySelectorAll('.character').forEach(img => {
+      img.addEventListener('click', () => {
+        selectedCharacter = img.dataset.character;
+        // Quitar borde a todos
+        document.querySelectorAll('.character').forEach(i => i.style.border = '2px solid transparent');
+        // Agregar borde al seleccionado
+        img.style.border = '3px solid gold';
+      });
+    });
+
+    // Botón de login
     document.getElementById("loginBtn").addEventListener("click", async () => {
       const input = document.getElementById("loginUser").value.trim();
       const msgDiv = document.getElementById("loginMsg");
       if (!input) { msgDiv.textContent = "Ingrese un usuario válido"; return; }
+      if (!selectedCharacter) { msgDiv.textContent = "Seleccione un personaje"; return; }
 
       try {
         const res = await fetch("/login", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ username: input })
+          body: JSON.stringify({ username: input, character: selectedCharacter })
         });
         const data = await res.json();
         if (data.success) {
           localStorage.setItem("username", data.username);
+          localStorage.setItem("character", selectedCharacter);
           location.reload();
         } else {
           msgDiv.textContent = data.message || "Error en login";
@@ -70,12 +100,11 @@
         msgDiv.textContent = "Error de conexión al servidor";
       }
     });
-  } else {
-    // POKER PLANNING
-    const socket = io();
 
-    // Después de crear el socket
-socket.emit("register-user", username);
+  } else {
+    // --- JUEGO ---
+    const socket = io();
+    socket.emit("register-user", username);
 
     container.innerHTML = `
       <div class="container">
@@ -87,44 +116,35 @@ socket.emit("register-user", username);
         <div id="result"></div>
       </div>
     `;
+
     const usersListDiv = document.getElementById("usersList");
     const playersContainer = document.getElementById("playersContainer");
     const resultDiv = document.getElementById("result");
 
     // Socket.io en tiempo real
-    socket.on("users-list", (users) => {
-      usersListDiv.innerHTML = `<strong>Usuarios conectados:</strong> ${users.join(", ")}`;
-    });
-    socket.on("new-user", (newUser) => {
+    socket.on("users-list", users => usersListDiv.innerHTML = `<strong>Usuarios conectados:</strong> ${users.join(", ")}`);
+    socket.on("new-user", newUser => {
       const current = usersListDiv.textContent.split(":")[1]?.trim() || "";
       usersListDiv.innerHTML = `<strong>Usuarios conectados:</strong> ${current ? current + ", " + newUser : newUser}`;
     });
-    socket.on("user-left", (leftUser) => {
+    socket.on("user-left", leftUser => {
       const current = usersListDiv.textContent.split(":")[1]?.trim().split(", ") || [];
       const updated = current.filter(u => u !== leftUser);
       usersListDiv.innerHTML = `<strong>Usuarios conectados:</strong> ${updated.join(", ")}`;
     });
 
     document.getElementById("logoutBtn").addEventListener("click", async () => {
-      try {
-        await fetch("/logout", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ username })
-        });
-      } catch(err) {
-        console.error("Error al desconectarse", err);
-      }
+      try { await fetch("/logout", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify({ username }) }); }
+      catch(err) { console.error(err); }
       localStorage.removeItem("username");
       location.reload();
     });
 
-    // Datos del juego
+    // --- Datos del juego (Poker Planning) ---
     const values = [1,2,3,5,8,"?"];
     const players = [""];
     const votes = {};
 
-    // Crear interfaz por jugador
     players.forEach(player => {
       const div = document.createElement("div");
       div.className = "player";
@@ -138,7 +158,6 @@ socket.emit("register-user", username);
       values.forEach(value => {
         const card = document.createElement("div");
         card.className = "card";
-
         const inner = document.createElement("div");
         inner.className = "card-inner";
 
@@ -167,7 +186,6 @@ socket.emit("register-user", username);
       playersContainer.appendChild(div);
     });
 
-    // Revelar resultados
     document.getElementById("showResults").addEventListener("click", () => {
       let total=0, count=0;
       const voteList=[];
@@ -175,7 +193,6 @@ socket.emit("register-user", username);
         const v = votes[player];
         voteList.push(`${player}: ${v !== undefined ? v : "No votó"}`);
         if (typeof v === "number") { total += v; count++; }
-
         const playerDiv = Array.from(playersContainer.querySelectorAll(".player"))
           .find(p => p.querySelector("h3").textContent === player);
         playerDiv.querySelectorAll(".card").forEach(c => {
